Add s3 storage. Add permission for comment
